--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   firebase_storage: ^4.0.0
   image_picker: ^0.6.7+7
   flutter_rating_bar: ^3.0.1+1
+  provider: ^4.3.2+2
+  splashscreen: ^1.2.0
+  curved_navigation_bar: ^0.3.3
+  flutter_svg: ^0.18.1
+  shared_preferences: ^0.5.10
+  firebase_auth: ^0.18.0+1
+  google_sign_in: ^4.5.3
+  flutter_facebook_login: ^3.0.0
+  http: ^0.12.2
 
 
 dev_dependencies:
@@ -54,6 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/background.svg
     - assets/
   #   - images/a_dot_ham.jpeg
 
