--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,18 +33,15 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_core: ^0.5.0
   firebase_storage: ^4.0.0
-  image_picker: ^0.6.7+7
   flutter_rating_bar: ^3.0.1+1
-  provider: ^4.3.2+2
   splashscreen: ^1.2.0
   curved_navigation_bar: ^0.3.3
-  flutter_svg: ^0.18.1
   shared_preferences: ^0.5.10
   firebase_auth: ^0.18.0+1
-  google_sign_in: ^4.5.3
-  flutter_facebook_login: ^3.0.0
-  http: ^0.12.2
-
+  image_picker: ^0.6.7+7
+  provider: ^4.3.2+2
+  get_it: ^5.0.0
+  connectivity: ^0.4.9+2
 
 dev_dependencies:
   flutter_test:
